<resources>
    <string name="app_name">EditME</string>
    <string name="file">Archivos</string>
    <string name="edit">Editar</string>
    <string name="settings">Configuracion</string>
    <string name="no_texts">Aún no has escrito nada</string>
    <string name="newtext">Nuevo texto</string>
    <string name="title_activity_drawer_test">DrawerTest</string>
    <string name="default_name">Nuevo texto</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_newtitlefragment">Ingresa el titulo:</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="save">GUARDAR</string>
    <string name="externalavailable">No esta disponible el sistema de almacenamiento externo</string>
    <string name="menu_bold">Bold</string>
    <string name="menu_underline">Underline</string>
    <string name="menu_italic">Italic</string>
    <string name="menu_left_align">Left align</string>
    <string name="menu_center_align">Center align</string>
    <string name="menu_justify_align">Justify</string>
    <string name="erase">¿Borrar el texto seleccionado?</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>
    <string name="fonttype">Tipo de fuente</string>
    <string name="pref_fonttype_default">Normal</string>
    <string name="pref_fontsize_default">14sp</string>
    <string name="fontsize">Tamaño de fuente</string>
    <string name="cardcolor">Color de fondo de los recuadros</string>
    <string name="how_to_erase_text">¿Cómo borrar un texto?</string>
    <string name="where_is_the_root">¿Donde se guardan los archivos?</string>
    <string name="sync_with_google_drive">Sincronización con Google Drive</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a vestibulum quam. Fusce pharetra accumsan ipsum, non facilisis est auctor sit amet. Quisque luctus porta nisl venenatis auctor. Donec non eros vel tellus congue aliquam. Vestibulum sit amet commodo tortor, eget sodales ex. Etiam commodo aliquet efficitur. Proin laoreet laoreet.</string>
    <string name="help">Ayuda</string>
    <string name="sync">Sincronizar</string>
    <string name="download">Descargar</string>
    <string name="app_texts">Textos de EditME</string>
    <string name="erasing_a_text">Para borrar un texto, mantenga seleccionado el texto que quiera eliminar y oprima "SI".</string>
    <string name="where_to_find">Los archivos se guardan en la raíz de la memoria interna del dispotivo dentro de una carpeta llamada "Texts". Puede añadir archivos de extensión ".txt" a esta carpeta y aparecerán en la aplicación para poder ser editadas.</string>
    <string name="googledrive_sync">Si enlazaste Google Drive con esta aplicación puedes usar las funciones "Sincronizar" y "Descargar" de el menú desplegable. Con "Sincronizar" puedes subir y sobreescribir los archivos creados por la aplicación a tu almacenamiento en la nube. Con "Download" puedes bajar los archivos de extensión ".txt" a tu dispositivo y aparecerán en la aplicación. Los archivos que se suban estarán en una carpeta llamada "EditME Texts". Es importante aclarar que solo se puede descargar textos creados por este aplicación.</string>
    <string name="sign_in_google">Iniciar sesión en Google</string>
    <string name="sign_out_google">Cerrar sesión de Google</string>
    <string name="not_linked_to_google">Aún no has sincronizado tu cuenta de Google con esta aplicación.</string>
    <string name="no_internet">No hay conexión a internet</string>
    <string name="connection_timed_out">No se pudo conectar a internet</string>
    <string name="success">Éxito!</string>
    <string name="start_connection">Empezando conexión...</string>
    <string name="taskrunning">Espera a que terminen la sincronización</string>
</resources>
